fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -183,6 +183,10 @@ body {
 }
 #aboutMeText{
 	display:none;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	margin-left: 40px;
+	margin-right: 40px;
 }
 
 #recordingsText{
@@ -257,6 +261,33 @@ cursor:grab;
 	
 
 @media only screen and (max-width: 870px) {
+
+	#entryPiano{
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		scale:3;
+	}
+	#entryPiano:hover{
+	scale:3.5;
+	transition:.5s;
+	cursor:pointer;
+	}
+	
+	.enterButton {
+		font-size: 30px;
+		background:none;
+		color:white;
+		text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+		border: none;
+		margin-top:10%;
+	}
+
+
+
+
+
+
 	.swoop {
 		position: absolute;
 		top: 50%;
